Final draft omg

--- a/appends/appa.tex
+++ b/appends/appa.tex
@@ -1,15 +1,7 @@
-\chapter{Tables}
+\chapter{Appendix}
 
-\begin{table}
-\caption{Armadillos}
-\label{arm:table}
-\begin{center}
-\begin{tabular}{||l|l||}\hline
-Armadillos & are \\\hline
-our	   & friends \\\hline
-\end{tabular}
-\end{center}
-\end{table}
+The appendix will go here. I will talk about Media Cloud, the data sets I acquired, and the link extraction software.
+% The Media Cloud software provides nearly comprehensive access to a wide variety of news media. Along with the repository, it also provides
 
 \clearpage
 \newpage
