--- a/thesis.bib
+++ b/thesis.bib
@@ -53,6 +53,18 @@
 	file = {EBSCO Full Text:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/TR7CFEEI/Hamilton and Komor - 2009 - The Important History News Organizations Have to T.pdf:application/pdf}
 }
 
+@online{joshi_fleet_2014,
+	title = {Fleet Week {SF} 2014: swoop},
+	url = {https://www.flickr.com/photos/captin_nod/15324633898/},
+	shorttitle = {Fleet Week {SF} 2014},
+	abstract = {The airshow as seen at Fleet Week San Francisco, Saturday Oct. 11 2014. Looming fog and wispy clouds made for a spectacular airshow. [Full Album {\textbar} 2012 {\textbar} 2011 {\textbar} 2010 {\textbar} 2009 {\textbar} 2008{\textgreater}/a{\textgreater}]},
+	titleaddon = {Flickr},
+	author = {Joshi, Bhautik},
+	urldate = {2015-04-24},
+	date = {2014-10-11},
+	file = {Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/ZRIG6G89/15324633898.html:text/html}
+}
+
 @online{ingram_is_2012,
 	title = {Is linking just polite, or is it a core value of journalism?},
 	url = {https://gigaom.com/2012/02/25/is-linking-just-polite-or-is-it-a-core-value-of-journalism/},
@@ -1760,6 +1772,20 @@ sharing on Twitter.},
 	date = {1997-08-07},
 	keywords = {Internet, journalism, {TECHNOLOGICAL} innovations},
 	file = {pavlik_future_of_online_journalism.pdf:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/9GK6KGTP/pavlik_future_of_online_journalism.pdf:application/pdf}
+}
+
+@inproceedings{samis_x_2015,
+	location = {Chicago},
+	title = {The X, Y, and Z of digital storytelling: Dramaturgy, directionality, and design},
+	url = {http://mw2015.museumsandtheweb.com/paper/the-x-y-z-of-digital-storytelling-dramaturgy-directionality-and-design/},
+	shorttitle = {The X, Y, and Z of digital storytelling},
+	abstract = {With digital storytelling more than twenty years old, the options for storytelling sometimes seem unduly constrained: either endlessly scrolling vertical columns or {YouTube} videos. How can we combine the X-axis of quick, all-in-one landscape consumption with the Y-axis of more granular detail to form a Z-axis of connection with the user? The authors examine examples of narrative presentations available today in digital and analog media and probe how they use the X- and Y-axes to enable surfing and diving, snacking, and in-depth experience. They examine the virtues and limitations of current ways of communicating and ask what opportunities might remain untapped: fresh ways of matching form to content suited to today's time-starved Web-surfing conditions.},
+	eventtitle = {Museums and the Web},
+	booktitle = {Digital Storytelling},
+	author = {Samis, Peter and Svenonius, Tim},
+	urldate = {2015-04-26},
+	date = {2015-02-10},
+	file = {Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/H6PNQG4X/the-x-y-z-of-digital-storytelling-dramaturgy-directionality-and-design.html:text/html}
 }
 
 @article{gustafson_translation_2014,
@@ -5759,6 +5785,17 @@ smartphone screen, that can be sent anywhere?},
 	date = {0100-12},
 	keywords = {philosophy},
 	file = {Attachment:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/BCWGJPJE/The Age of the World Picture - Martin Heidegger.pdf:application/pdf}
+}
+
+@online{baladi_vox_????,
+	title = {Vox Populi: Archiving a Revolution in the Digital Age},
+	url = {http://opendoclab.mit.edu/lara-baladi-vox-populi-archiving-a-revolution-in-the-digital-age},
+	shorttitle = {Vox Populi},
+	abstract = {During the \#Jan25 revolution—the hashtag used by online activists during the 2011 Egyptian uprising—the world watched as Egyptians toppled their president, Hosni Mubarak, transforming Tahrir Square into a vibrant place for demonstrations of social solidarity and political struggle. Just as the {YouTube} video “Tiananmen-Cairo Courage in Cairo” went viral, a friend posted on Facebook a speech Jean Paul Sartre had delivered to an audience of striking French autoworkers 40 years earlier. As the political tension grew, more and more images and videos of a packed Tahrir Square were uploaded to {YouTube} and other websites. They echoed footage from other uprisings across the Middle East and North Africa, as well as the sights and sounds of a vast array of past social movements. It was as though Sartre were protesting with everyone in Tahrir. As of today, the Egyptian revolution and its aftermath remain the most digitally documented and disseminated event in modern history. Vox Populi, Archiving a Revolution in the Digital Age, is a project based on an archive of articles, images, and {YouTube} videos {MIT} {OpenDocLab} Fellow Lara Baladi has gathered on and since the beginning of \#Jan25. It will come into being at the place where creative technologies, the challenges of archiving history at …},
+	titleaddon = {Open Documentary Lab at {MIT}},
+	author = {Baladi, Lara},
+	urldate = {2015-04-26},
+	file = {Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/75V33RWH/lara-baladi-vox-populi-archiving-a-revolution-in-the-digital-age.html:text/html}
 }
 
 @mvbook{mclaughlin_street_1996,
