--- a/biblio/biblio.tex
+++ b/biblio/biblio.tex
@@ -2,6 +2,8 @@
 %% If you want to create a bibliography file by hand, change the contents of
 %% this file to a `thebibliography' environment.  For more information 
 %% see section 4.3 of the LaTeX manual.
+
+
 \begin{singlespace}
-\printbibliography
+\printbibliography[notcategory=ignore]
 \end{singlespace}
