--- a/front/cover.tex
+++ b/front/cover.tex
@@ -125,7 +125,21 @@
 
 \section*{Acknowledgments}
 
-My acknowledgements will go here.
+In the spirit of attribution, this thesis would have been very different -- and might not exist at all -- without the influence and support of many advisors, colleagues, and friends at MIT and beyond.
+
+Thanks first and foremost to my committee -- William Uricchio, Kurt Fendt, and Ethan Zuckerman -- each of whom brought a wonderful mix of expertise and curiosity, making this thesis much more than it would have been without their help. I am also grateful for the many other faculty members and advisors who taught me and took the time to give feedback on my ideas and writings, especially T.L. Taylor, Heather Hendershot, Sherry Turkle, David Weinberger, Nick Montfort, Jim Paradis, JoAnne Yates, Catherine Clark, Rahul Bhargava, and Matt Carroll.
+
+Many thanks are owed as well to my CMS colleagues, who helped me hone my topic and my writing over many thesis therapy sessions and countless pitchers at the Muddy Charles Pub. This goes especially to the 2015 cohort (Chelsea Barabas, Heather Craig, Suruchi Dumpawar, Sean Flynn, Desi Gonzalez, Jesse Sell, Erik Stayton, Ainsley Sutherland, and Wang Yu).
+
+I also owe gratitude to the labs and research groups that have taken me in at various times in the past two years, especially the HyperStudio team (Jamie Folsom, Gabriella Horvath, Rachel Schnepper). Thanks as well to the Nieman Lab, Knight Lab, and my fellow Google Fellows for a dynamic and enlightening summer, especially to Josh Benton, Caroline O'Donovan, Justin Ellis, and Yossi Lichterman.
+
+Civic Media and Berkman also provided me with many ideas and inspirations, and I thank in particular Sands Fish, Alexis Hope, and Dalia Othman. The Wiser team (especially Sandeep Ayyappan, Tom Weingarten, Andy Whalen, and Cara Matteson) not only led me towards this thesis without even knowing it, but also kept me on their invaluable daily digest without even knowing it. And thanks to the Lasertag team at Media in Context (Meredith Broussard, Lindsey Cook, James Flanagan, Scott Shigeoka, and Matt Waite) for tackling archive archaeology with me in Doha.
+
+Thanks to the news archivists, editors, and librarians who took the time to speak with me about the work, especially Lily Rothman, Josh Rothman, and Lisa Tuite.
+
+Of course, thanks to my family, especially James and Joey for their extended hospitality. And I couldn't have done it without Ninja, Maple, and Percy (RIP).
+
+And thanks most of all to Liz, who has endured this at least as much as I have, with my endless gratitude and love.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % -*-latex-*-
