--- a/front/cover.tex
+++ b/front/cover.tex
@@ -54,7 +54,7 @@
 % You can use the \\ command to list multiple previous degrees
 %       \prevdegrees{B.S., University of California (1978) \\
 %                    S.M., Massachusetts Institute of Technology (1981)}
-\department{Department of Comparative Media Studies}
+\department{Department of Comparative Media Studies/Writing}
 
 % If the thesis is for two degrees simultaneously, list them both
 % separated by \and like this:
@@ -125,21 +125,17 @@
 
 \section*{Acknowledgments}
 
-In the spirit of attribution, this thesis would have been very different -- and might not exist at all -- without the influence and support of many advisors, colleagues, and friends at MIT and beyond.
+In the spirit of attribution, this thesis would not exist without the influence and support of many advisors, colleagues, and friends at MIT and beyond.
 
-Thanks first and foremost to my committee -- William Uricchio, Kurt Fendt, and Ethan Zuckerman -- each of whom brought a wonderful mix of expertise and curiosity, making this thesis much more than it would have been without their help. I am also grateful for the many other faculty members and advisors who taught me and took the time to give feedback on my ideas and writings, especially T.L. Taylor, Heather Hendershot, Sherry Turkle, David Weinberger, Nick Montfort, Jim Paradis, JoAnne Yates, Catherine Clark, Rahul Bhargava, and Matt Carroll.
+Thanks first and foremost to my committee members---William Uricchio, Kurt Fendt, and Ethan Zuckerman---each of whom brought a unique and invaluable mix of expertise, curiosity, encouragement, and criticism. I'm also grateful to the many faculty members and advisors who have taught me and given feedback, especially T.L. Taylor, Heather Hendershot, Sherry Turkle, David Weinberger, Jim Paradis, Rahul Bhargava, and Matt Carroll.
 
-Many thanks are owed as well to my CMS colleagues, who helped me hone my topic and my writing over many thesis therapy sessions and countless pitchers at the Muddy Charles Pub. This goes especially to the 2015 cohort (Chelsea Barabas, Heather Craig, Suruchi Dumpawar, Sean Flynn, Desi Gonzalez, Jesse Sell, Erik Stayton, Ainsley Sutherland, and Wang Yu).
+My CMS colleagues helped me hone my topic and my writing, both in class and over countless pitchers at the Muddy Charles Pub. Many thanks in particular to the 2015 cohort: Chelsea Barabas, Heather Craig, Suruchi Dumpawar, Sean Flynn, Desi Gonzalez, Jesse Sell, Erik Stayton, Ainsley Sutherland, and Wang Yu.
 
-I also owe gratitude to the labs and research groups that have taken me in at various times in the past two years, especially the HyperStudio team (Jamie Folsom, Gabriella Horvath, Rachel Schnepper). Thanks as well to the Nieman Lab, Knight Lab, and my fellow Google Fellows for a dynamic and enlightening summer, especially to Josh Benton, Caroline O'Donovan, Justin Ellis, and Yossi Lichterman.
+I've been lucky to learn from several research groups, all of whom provided many ideas and inspirations, especially the HyperStudio crew (Jamie Folsom, Gabriella Horvath, and Rachel Schnepper). Thanks as well to the Nieman Lab, Knight Lab, and my fellow Google Fellows for an enlightening summer, particularly Josh Benton, Caroline O'Donovan, Justin Ellis, and Yossi Lichterman. I'm also grateful to Civic Media, the Berkman Center, and the Open Documentary Lab for many enlightening discussions, particularly with Sands Fish, Alexis Hope, and Lara Baladi.
 
-Civic Media and Berkman also provided me with many ideas and inspirations, and I thank in particular Sands Fish, Alexis Hope, and Dalia Othman. The Wiser team (especially Sandeep Ayyappan, Tom Weingarten, Andy Whalen, and Cara Matteson) not only led me towards this thesis without even knowing it, but also kept me on their invaluable daily digest without even knowing it. And thanks to the Lasertag team at Media in Context (Meredith Broussard, Lindsey Cook, James Flanagan, Scott Shigeoka, and Matt Waite) for tackling archive archaeology with me in Doha.
+Thanks to the newsroom editors, librarians, and developers who spoke with me, notably Lily Rothman, Josh Rothman, and Lisa Tuite. Thanks also to the Lasertag team (Meredith Broussard, Lindsey Cook, James Flanagan, Scott Shigeoka, and Matt Waite) for tackling archive archaeology with me in Doha. And I owe the seeds of this thesis to the original Wiser team (Sandeep Ayyappan, Nathanael Johnson, Cara Matteson, Tom Weingarten, and Andy Whalen).
 
-Thanks to the news archivists, editors, and librarians who took the time to speak with me about the work, especially Lily Rothman, Josh Rothman, and Lisa Tuite.
-
-Of course, thanks to my family, especially James and Joey for their extended hospitality. And I couldn't have done it without Ninja, Maple, and Percy (RIP).
-
-And thanks most of all to Liz, who has endured this at least as much as I have, with my endless gratitude and love.
+Thanks to my family, especially James and Joey for their hospitality, and of course Ninja, Maple, and Percy (RIP). And thanks most of all to Liz, who has endured this at least as much as I have, with undying support, humor, and spicy food.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % -*-latex-*-
