--- a/thesis.bib
+++ b/thesis.bib
@@ -1781,7 +1781,7 @@ sharing on Twitter.},
 	shorttitle = {The X, Y, and Z of digital storytelling},
 	abstract = {With digital storytelling more than twenty years old, the options for storytelling sometimes seem unduly constrained: either endlessly scrolling vertical columns or {YouTube} videos. How can we combine the X-axis of quick, all-in-one landscape consumption with the Y-axis of more granular detail to form a Z-axis of connection with the user? The authors examine examples of narrative presentations available today in digital and analog media and probe how they use the X- and Y-axes to enable surfing and diving, snacking, and in-depth experience. They examine the virtues and limitations of current ways of communicating and ask what opportunities might remain untapped: fresh ways of matching form to content suited to today's time-starved Web-surfing conditions.},
 	eventtitle = {Museums and the Web},
-	booktitle = {Digital Storytelling},
+	booktitle = {Museums and the Web},
 	author = {Samis, Peter and Svenonius, Tim},
 	urldate = {2015-04-26},
 	date = {2015-02-10},
@@ -8307,7 +8307,7 @@ We diagnostically evaluate the task by first linking references to past, newswor
 	pages = {662--679},
 	number = {5},
 	journaltitle = {Information, Communication \& Society},
-	author = {Crawford, Kate and boyd, danah},
+	author = {Crawford, Kate and {boyd}, {danah}},
 	date = {2012-06},
 	file = {Attachment:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/WCQBNUHR/Critical Questions for Big Data - Danah Boyd.pdf:application/pdf}
 }
@@ -10269,6 +10269,20 @@ I lived in Lodz, Poland, until the age of 23.},
 	langid = {english},
 	keywords = {{HYPERLINKS}, news media, newspapers, organizational change, social network analysis},
 	file = {newspapers_long_term_effects_of_hyperlinking.pdf:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/NQUXVGNU/newspapers_long_term_effects_of_hyperlinking.pdf:application/pdf;Snapshot:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/QTDVHFKB/abstract.html:text/html}
+}
+
+@inproceedings{smith_infectious_2013,
+	title = {Infectious texts: Modeling text reuse in nineteenth-century newspapers},
+	doi = {10.1109/BigData.2013.6691675},
+	shorttitle = {Infectious texts},
+	abstract = {Texts propagate through many social networks and provide evidence for their structure. We present efficient algorithms for detecting clusters of reused passages embedded within longer documents in large collections. We apply these techniques to analyzing the culture of reprinting in the United States before the Civil War. Without substantial copyright enforcement, stories, poems, news, and anecdotes circulated freely among newspapers, magazines, and books. From a collection of {OCR}'d newspapers, we extract a new corpus of reprinted texts, explore the geographic spread and network connections of different publications, and analyze the time dynamics of different genres.},
+	eventtitle = {2013 {IEEE} International Conference on Big Data},
+	pages = {86--94},
+	booktitle = {2013 {IEEE} International Conference on Big Data},
+	author = {Smith, D.A. and Cordell, R. and Dillon, E.M.},
+	date = {2013-10},
+	keywords = {Aggregates, cluster detection, Clustering algorithms, documents, genre time dynamics, geographic spread, Heuristic algorithms, history, Indexing, infectious texts, new corpus extraction, newspaper {OCR}, nineteenth-century newspapers, Optical character recognition software, pattern clustering, publication network connections, publishing, reprinting culture analysis, reused passages, Social Networks, Social network services, text analysis, text reuse modelling, {UNITED} States},
+	file = {IEEE Xplore Abstract Record:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/E6JU688J/login.html:text/html;IEEE Xplore Full Text PDF:/Users/liam/Library/Application Support/Zotero/Profiles/dwy7wgsd.default/zotero/storage/I8UBJUII/Smith et al. - 2013 - Infectious texts Modeling text reuse in nineteent.pdf:application/pdf}
 }
 
 @mvbook{williams_is_100,
