--- a/thesis.tex
+++ b/thesis.tex
@@ -34,6 +34,9 @@
 \usepackage[notes, hyperref=true, doi=false, isbn=false, citereset=chapter, bibencoding=utf8, backend=biber]{biblatex-chicago}
 \usepackage[autostyle]{csquotes}
 \usepackage{graphicx}
+\usepackage{enumitem}
+\usepackage[utf8]{inputenc}
+\setlist{noitemsep}
 \addbibresource{thesis.bib}
 \pagestyle{plain}
 
@@ -108,7 +111,7 @@ process all files:}
 \include{chaps/chap4}
 \include{chaps/conc}
 \appendix
-% \include{appends/appa}
+\include{appends/appa}
 % \include{appends/appb}
 \include{biblio/biblio}
 \end{document}
